*: rename preserveKVs to prevKv
